--- a/package.json
+++ b/package.json
@@ -18,7 +18,13 @@
         "mmarkdown": "^1.0.0",
         "eslint": "^4.19.1",
         "eslint-plugin-jsx-a11y": "^6.0.3",
-        "eslint-config-airbnb": "^16.1.0"
+        "eslint-config-airbnb": "^16.1.0",
+        "mol-conventional-changelog": "^1.2.0"
+    },
+    "config": {
+      "commitizen": {
+        "path": "./node_modules/mol-conventional-changelog"
+      }
     },
     "keywords": [
         "ci",
