--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
         "glob": "^7.1.2",
         "mmarkdown": "^1.0.0",
         "eslint": "^4.19.1",
-        "eslint-plugin-jsx-a11y": "^6.0.3",
-        "eslint-config-airbnb": "^16.1.0",
+        "eslint-config-mailonline": "^9.0.0",
         "mol-conventional-changelog": "^1.2.0"
     },
     "config": {
