refactor: centralize request execution

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "dependencies": {
         "minimist": "^1.2.0",
         "request": "^2.85.0",
-        "request-promise": "^4.2.2"
+        "request-promise": "^4.2.2",
+        "chalk": "^2.4.1"
     },
     "devDependencies": {
         "glob": "^7.1.2",
