--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
         "mmarkdown": "^1.0.0",
         "eslint": "^4.19.1",
         "eslint-config-mailonline": "^9.0.0",
-        "mol-conventional-changelog": "^1.2.0"
+        "mol-conventional-changelog": "^1.2.0",
+        "jest": "^22.4.3"
     },
     "config": {
       "commitizen": {
