--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
       },
     "scripts": {
         "build:readme": "mmarkdown --src ./build/readme.md --out README.md --scripts ./build/mmd.js",
+        "test": "jest",
         "eslint": "eslint --ignore-path .gitignore './**/*.js'"
     },
     "dependencies": {
@@ -24,7 +25,8 @@
         "eslint": "^4.19.1",
         "eslint-config-mailonline": "^9.0.0",
         "mol-conventional-changelog": "^1.2.0",
-        "jest": "^22.4.3"
+        "jest": "^22.4.3",
+        "jest-tap-reporter": "^1.9.0"
     },
     "config": {
       "commitizen": {
@@ -39,5 +41,10 @@
         "circle",
         "travisci",
         "circleci"
-    ]
+    ],
+    "jest": {
+        "reporters": [
+            "jest-tap-reporter"
+        ]
+    }
 }
