--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "scripts": {
         "build:readme": "mmarkdown --src ./build/readme.md --out README.md --scripts ./build/mmd.js",
         "test": "jest",
-        "eslint": "eslint --ignore-path .gitignore './**/*.js'"
+        "eslint": "eslint --ignore-path .gitignore './**/*.js'",
+        "precommit": "npm run eslint",
+        "prepush": "npm t"
     },
     "dependencies": {
         "minimist": "^1.2.0",
@@ -26,7 +28,8 @@
         "eslint-config-mailonline": "^9.0.0",
         "mol-conventional-changelog": "^1.2.0",
         "jest": "^22.4.3",
-        "jest-tap-reporter": "^1.9.0"
+        "jest-tap-reporter": "^1.9.0",
+        "husky": "^0.14.3"
     },
     "config": {
       "commitizen": {
