--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
         "minimist": "^1.2.0",
         "request": "^2.85.0",
         "request-promise": "^4.2.2",
-        "chalk": "^2.4.1"
+        "chalk": "^2.4.1",
+        "shell-escape": "^0.2.0"
     },
     "devDependencies": {
         "glob": "^7.1.2",
