--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,6 +20,7 @@
         "quotes": "off",
         "unicorn/no-array-instanceof": "off",
         "no-inline-comments": "off",
-        "line-comment-position": "off"
+        "line-comment-position": "off",
+        "complexity": "off"
     }
 }
