--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,3 +41,8 @@ jobs:
       - run:
           name: Post GitHub message
           command: ./bin/ci.js github-post
+
+      - run:
+          name: Print env vars
+          command: npx cross-ci printenv
+
